✨ Feat(clip): create clip path

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import './partials/normalize';
 @import './partials/breakpoints';
 @import './partials/variables';
+@import './partials/path';
 
 * {
   box-sizing: border;
